...
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/colorPrimaryDark"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_movie"
            app:bt_shape="@drawable/bottom_nav_item_background_stroke"
            app:bt_title="@string/tab_title_movie" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/nav_tvshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:bt_colorActive="@color/colorPrimaryDark"
            app:bt_colorInactive="@color/default_inactive"
            app:bt_icon="@drawable/ic_tv_show"
...
